add class=link to logo

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" lang="en"><span class="logo-color-1">Web</span><span class="logo-color-3">Studio</span></a>
+        <a href="./index.html" lang="en" class="link"><span class=" logo-color-1">Web</span><span class="logo-color-3">Studio</span></a>
         <address class="address">
             <ul class="list">
                 <li class="address-item"><a href="https://goo.gl/maps/AcQu7C4WXfpjc9Hp7" target="_blank" rel="noopener noreferrer" class="link address-google-map">г. Киев, пр-т Леси Украинки, 26</a></li>
