--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
        </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" lang="en"><span class="logo-color-1">Web</span><span
+        <a href="./index.html" lang="en" class="link"><span class="logo-color-1">Web</span><span
                 class="logo-color-3">Studio</span></a>
         <address class="address">
             <ul class="list">
