--- a/portfolio.html
+++ b/portfolio.html
@@ -101,8 +101,8 @@
        </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" lang="en" class="link"><span class="logo-color-1">Web</span><span
-                class="logo-color-3">Studio</span></a>
+        <a href="./index.html" lang="en" class="link"><span class="logo logo-color-1">Web</span><span
+                class="logo logo-color-3">Studio</span></a>
         <address class="address">
             <ul class="list">
                 <li class="address-item"><a href="https://goo.gl/maps/AcQu7C4WXfpjc9Hp7" target="_blank"
